Fixed z-index problem + small optimisations

--- a/app/styles/components/controls-tabs.scss
+++ b/app/styles/components/controls-tabs.scss
@@ -8,7 +8,7 @@
 	width:280px;
 	flex-direction:column;
 	position:relative;
-	z-index:2;
+	z-index:4;
 
 	&-headers {
 		margin:0;
